log
Tue, May 13, 2025  2:41:38 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before ':' token
   int i,j :
           ^
sudoku.c:58:25: error: 'vacia' undeclared (first use in this function)
   for(i = 0 ; i < 9 && !vacia; i++ ){
                         ^~~~~
sudoku.c:58:25: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:9: error: 'j' undeclared (first use in this function)
     for(j = 0 ; j < 9 && !vacia ; j++ ){
         ^
3f0e54c
Tue, May 13, 2025  2:43:34 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9a31d1b
Tue, May 13, 2025  3:05:49 PM: 
 sudoku.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:58:43: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     for(int j = 0 ; i < 9 && columna == -1, j++){
                                           ^
sudoku.c:58:48: error: expected ';' before ')' token
     for(int j = 0 ; i < 9 && columna == -1, j++){
                                                ^
cc1.exe: all warnings being treated as errors
39063e8
Tue, May 13, 2025  3:06:37 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
647efad
Tue, May 13, 2025  3:08:59 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
7c015b9
Tue, May 13, 2025  3:09:56 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
f224071
Tue, May 13, 2025  3:12:25 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
dfb9ac1
Tue, May 13, 2025  3:28:13 PM: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:52:19: error: 'nodo' undeclared (first use in this function)
       int valor = nodo->sudo [i][j];
                   ^~~~
sudoku.c:52:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:77:11: error: variable 'columna_actual' set but not used [-Werror=unused-but-set-variable]
       int columna_actual = 3 * ( k % 3 ) + ( p % 3 );
           ^~~~~~~~~~~~~~
sudoku.c:76:11: error: variable 'fila_actual' set but not used [-Werror=unused-but-set-variable]
       int fila_actual = 3 * ( k / 3 ) + ( p / 3 );
           ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
5d34007
Tue, May 13, 2025  3:29:08 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:52:19: error: 'nodo' undeclared (first use in this function)
       int valor = nodo->sudo [i][j];
                   ^~~~
sudoku.c:52:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:77:11: error: variable 'columna_actual' set but not used [-Werror=unused-but-set-variable]
       int columna_actual = 3 * ( k % 3 ) + ( p % 3 );
           ^~~~~~~~~~~~~~
sudoku.c:76:11: error: variable 'fila_actual' set but not used [-Werror=unused-but-set-variable]
       int fila_actual = 3 * ( k / 3 ) + ( p / 3 );
           ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
3566185
Tue, May 13, 2025  3:33:48 PM: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
63982ea
Tue, May 13, 2025  3:47:00 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
e24b6f7
Tue, May 13, 2025  3:52:23 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:131:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
be39119
Tue, May 13, 2025  3:55:47 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
1682c75
Tue, May 13, 2025  4:29:35 PM: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:139:10: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
   while(!isEmpty(S)){
          ^~~~~~~
sudoku.c:140:22: error: implicit declaration of function 'Front' [-Werror=implicit-function-declaration]
     Node * current = Front(S);
                      ^~~~~
sudoku.c:140:22: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
364420a
Tue, May 13, 2025  4:31:54 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:139:10: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
   while(!isEmpty(S)){
          ^~~~~~~
sudoku.c:140:22: error: implicit declaration of function 'Front' [-Werror=implicit-function-declaration]
     Node * current = Front(S);
                      ^~~~~
sudoku.c:140:22: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
1ed779c
Tue, May 13, 2025  4:32:16 PM: 
 tests:  10|0
total_score: 70/70
3f7371a
Tue, May 13, 2025  4:38:41 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:160:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
9e60caf
Tue, May 13, 2025  4:39:11 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:160:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
647b6fd
Tue, May 13, 2025  4:40:01 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
fc81ee7
Tue, May 13, 2025  4:42:17 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
e1efe5c
Sat, May 17, 2025  9:42:55 PM: 
 tests:  10|0
total_score: 70/70
4ced16b
Sat, May 17, 2025  9:57:17 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:159:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
e32a140
Sat, May 17, 2025  9:58:59 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
a177fa1
